# kdepim

./: CMakeLists.txt
agents/: CMakeLists.txt
agents/notesagent/: notesagent.cpp
akonadiconsole/: monitoritem.cpp  querydebugger.cpp
calendarviews/agenda/: agenda.cpp  agenda.h  agendaitem.cpp  agendaview.cpp  agendaview.h  viewcalendar.cpp  viewcalendar.h
composereditor-ng/: CMakeLists.txt
kleopatra/: kleopatraapplication.cpp
kmail/: kmmainwidget.cpp
kontact/plugins/korganizer/: CMakeLists.txt
kontact/src/: mainwindow.cpp
korganizer/: akonadicollectionview.cpp
korganizer/views/collectionview/: controller.cpp
libkdepim/: CMakeLists.txt
libkdepim/addressline/: addresseelineedit.cpp
libkdepim/ldap/: addhostdialog.cpp  addhostdialog.h  kcmldap.cpp
libksieve/ksieveui/managescriptsjob/: checkkep14supportjob.cpp  generateglobalscriptjob.cpp  parseuserscriptjob.cpp  parseuserscriptjob.h
libksieve/ksieveui/managescriptsjob/tests/: parseuserjobtest.h
libksieve/ksieveui/util/: util.cpp
libksieve/ksieveui/vacation/: multiimapvacationdialog.cpp  multiimapvacationmanager.cpp  vacation.cpp  vacationcreatescriptjob.cpp  vacationcreatescriptjob.h  vacationmanager.cpp  vacationpagewidget.cpp  vacationscriptextractor.cpp  vacationscriptextractor.h  vacationutils.cpp  vacationutils.h
libksieve/ksieveui/vacation/tests/: vacationutilstest.cpp  vacationutilstest.h
mailcommon/: CMakeLists.txt
mailcommon/filter/: filteractionwithcommand.cpp
mailcommon/filter/tests/: CMakeLists.txt  actionpipethrough.cpp  actionpipethrough.h
mailcommon/folder/: foldercollectionmonitor.cpp
messagecomposer/composer/: composerlineedit.cpp  composerlineedit.h
messagecomposer/recipient/: recipientline.cpp  recipientline.h  recipientseditor.cpp  recipientseditor.h
messagelist/: CMakeLists.txt  storagemodel.cpp
messagelist/core/: messageitem.cpp  messageitem.h  messageitem_p.h  view.cpp
messageviewer/job/: createeventjob.cpp  createnotejob.cpp  createtodojob.cpp
messageviewer/viewer/: viewer_p.cpp
pimcommon/autocorrection/tests/: CMakeLists.txt
plugins/messageviewer/bodypartformatter/: text_calendar.cpp
